# algorithmic_trading

./: .pre-commit-config.yaml  001_equal_weight_S&P_500.ipynb  002_quantitative_momentum_strategy.ipynb  003_quantitative_value_strategy.ipynb  README.md  config.py  pyproject.toml  qualitative_value_strategy.py  quantitative_momentum_strategy.py  sp_500_stocks.csv
analysis_tables/: momentum_strategy.xlsx  value_strategy.xlsx
