[tool.poetry]
name = "stocks"
version = "0.1.0"
description = ""
authors = ["luikym <luikym@minautor.fr>"]

[tool.poetry.dependencies]
python = "^3.9"
notebook = "^6.4.4"
pandas-datareader = "^0.10.0"
pandas = "^1.3.3"
sklearn = "^0.0"
keras = "^2.6.0"
matplotlib = "^3.4.3"
tensorflow = "^2.6.0"
XlsxWriter = "^3.0.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
